# Project-Fluffy-Pug

./: README.md
Fluffy Pug/: EnemyChampionManager.h  EnemyChampionManager.m
Fluffy Pug Command Line/: CMakeLists.txt  Makefile  Readme.txt  hellofunc.cpp  hellomake.cpp  main.cpp  run
Fluffy Pug Command Line/source/: main.cpp
Fluffy Pug Command Line/source/Detection/Ability Manager/: AbilityManager.m
Fluffy Pug Command Line/source/Detection/Objects/: GenericObject.h  SelfHealth.m
Fluffy Pug Command Line/source/Detection/Shop Manager/: ShopManager.m
Fluffy Pug Command Line/xdispatch.framework/Versions/0.8.0~devel/: xdispatch
Fluffy Pug Command Line/xdispatch.framework/Versions/0.8.0~devel/Resources/: Info.plist
Fluffy Pug/Fluffy Pug/: AbilityManager.h  AbilityManager.m  AbilityManagerOLD.h  AbilityManagerOLD.m  AbilityManagerPBE.h  AbilityManagerPBE.m  AllyChampionManager.h  AllyChampionManager.m  AllyMinionManager.h  AllyMinionManager.m  AppDelegate.h  AppDelegate.m  AutoQueueManager.h  AutoQueueManager.m  BasicAI.h  BasicAI.m  DetectionManager.h  DetectionManager.m  EnemyChampionManager.h  EnemyChampionManager.m  EnemyMinionManager.h  EnemyMinionManager.m  EnemyTowerManager.h  EnemyTowerManager.m  Info.plist  InteractiveEvents.h  InteractiveEvents.m  ItemManager.h  ItemManager.m  ItemManagerOLD.h  ItemManagerOLD.m  ItemManagerPBE.h  ItemManagerPBE.m  LeagueDetector.m  LeagueGameState.h  LeagueGameState.m  MapManager.h  MapManager.m  SelfChampionManager.h  SelfChampionManager.m  (+10 more)
Fluffy Pug/Fluffy Pug.xcodeproj/: project.pbxproj
(+178 files in other folders)
